# Scalpel

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
agent_files/: Microtome_BRD.md  Microtome_Implementation_Plan.md  Scalpel_BRD.md  Scalpel_Implementation_Plan.md  Segmenta_BRD.md  Segmenta_Implementation_Plan.md
docs/: medium_post.md
microtome/: __init__.py  config.py  exceptions.py  microtome.py
microtome/cli/: __init__.py  main.py
microtome/embeddings/: __init__.py  sentence_transformer.py
microtome/llm/: __init__.py  base.py  openai_provider.py
microtome/llm/prompts/: __init__.py  validation.py
microtome/models/: __init__.py  boundary.py  chunk.py  document.py  enums.py  result.py
microtome/parsers/: __init__.py  base.py  factory.py  markdown_parser.py  pdf_parser.py  text_parser.py
microtome/pipeline/: __init__.py  base.py  context.py  orchestrator.py
microtome/pipeline/stages/: __init__.py  atomize_stage.py  boundary_detect_stage.py  boundary_validate_stage.py  chunk_form_stage.py  enrich_stage.py  granularity_stage.py  output_stage.py  parse_stage.py  segment_stage.py
microtome/segmenters/: __init__.py  paragraph.py
microtome/utils/: __init__.py  token_counter.py
microtome_output/: Microtome_llm_debug_Distributed_12_Topic_Semantic_Document_20260205_060526.jsonl  Microtome_llm_debug_Distributed_12_Topic_Semantic_Document_20260205_060602.jsonl
scalpel/: __init__.py  config.py  exceptions.py  scalpel.py
scalpel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scalpel/cli/: __init__.py  main.py
scalpel/embeddings/: __init__.py  base.py  sentence_transformer.py  similarity.py
scalpel/llm/: __init__.py  base.py  openai_provider.py
scalpel/llm/prompts/: __init__.py  enrichment.py  granularity.py  validation.py
scalpel/models/: __init__.py  boundary.py  chunk.py  document.py  enums.py  result.py
scalpel/output/: __init__.py  base.py  markdown_formatter.py
scalpel/parsers/: __init__.py  base.py  factory.py  markdown_parser.py  pdf_parser.py  text_parser.py
scalpel/pipeline/: __init__.py  base.py  context.py  orchestrator.py
scalpel/pipeline/stages/: __init__.py  atomize_stage.py  boundary_detect_stage.py  boundary_validate_stage.py  chunk_form_stage.py  enrich_stage.py  granularity_stage.py  output_stage.py  parse_stage.py  segment_stage.py
scalpel/segmenters/: __init__.py  paragraph.py
scalpel/utils/: __init__.py  retry.py
scalpel_output/: Scalpel_granularity_plan_Distributed_12_Topic_Semantic_Document_20260205_060602.json  Scalpel_llm_debug_Distributed_12_Topic_Semantic_Document_20260205_060526.jsonl  Scalpel_llm_debug_Distributed_12_Topic_Semantic_Document_20260205_060602.jsonl  Scalpel_output_Distributed_12_Topic_Semantic_Document.md
scripts/: generate_readme_media.py
segmenta/: __init__.py  config.py  exceptions.py  segmenta.py
segmenta/cli/: __init__.py  main.py
segmenta/embeddings/: __init__.py  sentence_transformer.py
segmenta/llm/: __init__.py  base.py  openai_provider.py
segmenta/llm/prompts/: __init__.py  enrichment.py  granularity.py  validation.py
segmenta/models/: __init__.py  boundary.py  chunk.py  document.py  enums.py  result.py
segmenta/parsers/: __init__.py  base.py  factory.py  markdown_parser.py  pdf_parser.py  text_parser.py
segmenta/pipeline/: __init__.py  base.py  context.py  orchestrator.py
segmenta/pipeline/stages/: __init__.py  atomize_stage.py  boundary_detect_stage.py  boundary_validate_stage.py  chunk_form_stage.py  enrich_stage.py  granularity_stage.py  output_stage.py  parse_stage.py  segment_stage.py
segmenta/segmenters/: __init__.py  paragraph.py
segmenta/utils/: __init__.py  llm_debug_logger.py
tests/: test_llm_debug_logger_tags.py  test_worker_critique.py
